Adds projection pushdown visitor in the CLI
Adds an --optimize flag to the CLI

Adds a Datum writer for the CLI

Adds a RelScanTable interface to the plan